Rework SQL